升级 JDK21/Boot3.5 并接入内嵌 Neo4j 图谱、知识库预览编辑与向量缓存
- 运行时：Java 21 + Spring Boot 3.5.16，eclipse-collections 统一到 11.1.0 以兼容内嵌 Neo4j 5.26
- 图谱：新增 graph 包（Neo4j 内嵌、电力拓扑模型、TopologyGraphService、GraphController）与前端 GraphExplorer
- 知识库：文档预览与编辑重切、向量缓存持久化（KnowledgeVectorCache）、自定义向量模型配置持久化并在重启后可自愈回退 BM25（KnowledgeSettingsStore/CachedEmbeddingProvider）、全量快照导入导出
- 前端：知识库 Tab 增强、模型配置页、Agent 选择与复用、对话 Markdown 与 Mermaid 渲染
- 工程：新增 deploy 打包/重启脚本与单 jar 打包说明；补 E2E 脚本与排障笔记；.gitignore 排除本地工具状态、内嵌 JRE 运行时与向量同步包